[package]
name = "upgrenade-server"
version = "0.1.0"
authors = ["Stan Drozd <drozdziak1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.0.0"
dotenv = "0.15.0"
log = "0.4.8"
env_logger = "0.7.1"
toml = "0.5.6"
serde = "1.0.105"
lazy_static = "1.4.0"
failure = "0.1.7"
semver = "0.9.0"
